k8_cortx_cloud/services/motr-hax-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: motr-hax-svc
spec:
  selector:
    name: cortx-data
  ports:
    - name: port22003
      protocol: TCP
      port: 22003
      targetPort: 22003
